[package]
name = "relay-status-reporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.14.0"
reqwest = { version = "0.12.4", features = ["json", "gzip", "rustls-tls-native-roots", "h2", "http2"], default-features = false }
serde = { version = "1.0.200", features = ["derive"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
url = { version = "2.5.0", features = ["serde"] }
